Use same docker image for teardown as setup.
[#144897369]

Signed-off-by: Genevieve LEsperance <glesperance@pivotal.io>

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -504,8 +504,10 @@ jobs:
       resource: infrastructure-ci-bbl-states
       passed: [aws-terraform-cf-delete]
       trigger: true
+    - get: cf-deployment-concourse-tasks-bbl-dev-docker-image
   - task: bbl-destroy
     file: ci/scripts/common/bbl-destroy/task.yml
+    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
     params:
       BBL_STATE_DIR: bbl-aws-terraform
     on_failure:
