Use cf-infra-bot access token for github requests.
Signed-off-by: Genevieve LEsperance <glesperance@pivotal.io>

--- a/pipelines/dockerfiles.yml
+++ b/pipelines/dockerfiles.yml
@@ -71,8 +71,9 @@ resources:
 - name: bbl-release
   type: github-release
   source:
+    owner: cloudfoundry
     repository: bosh-bootloader
-    user: cloudfoundry
+    access_token: {{cf_infra_bot_user_github_access_token}}
 
 - name: slack-alert
   type: slack-notification
