--- a/scripts/bosh-bootloader/concourse-integration/task.yml
+++ b/scripts/bosh-bootloader/concourse-integration/task.yml
@@ -20,12 +20,12 @@ run:
   path: ci/scripts/bosh-bootloader/concourse-integration/task
 
 params:
-  AWS_REGION:
-  AWS_ACCESS_KEY_ID:
-  AWS_SECRET_ACCESS_KEY:
-  GCP_SERVICE_ACCOUNT_KEY:
-  GCP_PROJECT_ID:
-  GCP_REGION:
-  GCP_ZONE:
+  BBL_AWS_REGION:
+  BBL_AWS_ACCESS_KEY_ID:
+  BBL_AWS_SECRET_ACCESS_KEY:
+  BBL_GCP_SERVICE_ACCOUNT_KEY:
+  BBL_GCP_PROJECT_ID:
+  BBL_GCP_REGION:
+  BBL_GCP_ZONE:
   BBL_TEST_ENV_ID_PREFIX:
   ENABLE_TERRAFORM_FLAG:
