--- a/scripts/bosh-bootloader/gcp-integration/task.yml
+++ b/scripts/bosh-bootloader/gcp-integration/task.yml
@@ -16,8 +16,8 @@ run:
   path: ci/scripts/bosh-bootloader/gcp-integration/task
 
 params:
-  GCP_SERVICE_ACCOUNT_KEY:
-  GCP_PROJECT_ID:
-  GCP_REGION:
-  GCP_ZONE:
+  BBL_GCP_SERVICE_ACCOUNT_KEY:
+  BBL_GCP_PROJECT_ID:
+  BBL_GCP_REGION:
+  BBL_GCP_ZONE:
   BBL_TEST_ENV_ID_PREFIX:
