--- a/pipelines/bosh-deployment.yml
+++ b/pipelines/bosh-deployment.yml
@@ -128,9 +128,9 @@ jobs:
   - task: test
     file: ci/scripts/bosh-bootloader/aws-integration/task.yml
     params:
-      AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-      AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
-      AWS_REGION: {{aws_region}}
+      BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
+      BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
+      BBL_AWS_REGION: {{aws_region}}
       BBL_TEST_ENV_ID_PREFIX: bosh-deployment
     on_failure:
       do:
@@ -155,10 +155,10 @@ jobs:
   - task: test
     file: ci/scripts/bosh-bootloader/gcp-integration/task.yml
     params:
-      GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
-      GCP_PROJECT_ID: {{gcp_project_id}}
-      GCP_REGION: {{gcp_region}}
-      GCP_ZONE: {{gcp_zone}}
+      BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
+      BBL_GCP_PROJECT_ID: {{gcp_project_id}}
+      BBL_GCP_REGION: {{gcp_region}}
+      BBL_GCP_ZONE: {{gcp_zone}}
       BBL_TEST_ENV_ID_PREFIX: bosh-deployment
     on_failure:
       do:
