--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -392,7 +392,7 @@ jobs:
   - aggregate:
     - get: bosh-bootloader
       resource: bosh-bootloader-develop
-      passed: [test-bosh-bootloader]
+      passed: [bbl-downstream-docker-image]
       trigger: true
     - get: ci
       resource: infrastructure-ci
